fixed navigation alignment at responsive full width

--- a/css/style.scss
+++ b/css/style.scss
@@ -47,28 +47,37 @@ body {
     position: relative;
     top: 3px;
 }
-
-.nav {
-    z-index: 3;
+//.5rem 1rem
+.navbar {
+    padding: 0;
+    #nav-contain-menu{
+        padding:.5rem 1rem;
+    }
+    .navbar-brand {
+        font-family: 'Goldman', cursive;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        margin: 0;
+        color: #fff !important;
+    }
 }
-
-.navbar-brand {
-    font-family: 'Goldman', cursive;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    margin: 0;
-    color: #fff !important;
+#nav-contain-menu {
+    z-index: 1;
+}
+.no-scroll {
+    height: 100vh;
+    overflow-y: hidden;
 }
 
 @media screen and (max-width: 991px) {
     #nav-contain-links {
         color: #fff;
-        clip-path: circle(0vh at 90% 30%);
+        clip-path: circle(50vh at 110% 50%);
         transition: all 1s ease-in-out;
     }
 
     #nav-contain-links.show {
-        clip-path: circle(80vh at 120% 30%);
+        clip-path: circle(120vh at 120% 50%);
     }
 
     .navbar-nav {
@@ -78,17 +87,17 @@ body {
         flex-direction: column;
         justify-content: space-between;
         padding: 8em 0;
-        margin-top: -3em;
-        margin-bottom: 3em;
+        // margin-top: -3em;
+        // margin-bottom: 3em;
         transition: height 3s ease-in-out;
-
+        z-index: 3;
         a {
             display: inline-block;
             text-align: right;
             margin-right: 1em;
         }
     }
-}
+}//media query ends
 
 #nav-contain-links a {
     color: #fff;
